feat: 完善 Phase 1 部署配置、API 文档与开发文档
- Docker: 前后端多阶段构建, nginx SPA 路由 + API 反向代理, 生产/开发两套 compose 配置
- API 文档: 所有 DTO 添加 @Schema 注解, OpenAPI 配置完善
- 健康检查: 自定义 MySQL/Redis/AI Provider HealthIndicator
- 日志: logback-spring.xml 按天滚动保留 30 天
- 安全: CORS 可通过环境变量限制生产域名
- 文档: 完整 README + 6 篇开发文档 (架构/数据库/API/Prompt/部署/排错)
- 验证: docker compose up 一键启动 4 服务全部 healthy

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>